Fix puzzle unlock, dark mode toggling bugs (#12)
* Fix new puzzles not being shown

* Fix dark/light toggling bugs

* Fix dark mode on input, inline buttons

* Remove border radius, fix colours

* In which Carmen learns to trust css frameworks

* Add newline

--- a/res/css/custom.css
+++ b/res/css/custom.css
@@ -58,3 +58,16 @@ html.light {
   --flatify__color-dark-light: #77838e !important;
   --flatify__color-dark-dark: #1e2a35 !important;
 }
+
+.choices__input {
+    border-radius: 0 !important;
+    background-color: var(--flatify__bg-color-dark) !important;
+}
+
+.is-highlighted {
+    background-color: var(--flatify__bg-color-darker) !important;
+}
+
+.choices__list--dropdown, .choices__inner {
+    background-color: var(--flatify__card-bg-color) !important;
+}
